err/pygt511c3.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyGT511C3'...
Compiling './lib/python3.5/site-packages/pyGT511C3/FPS.py'...
***   File "./lib/python3.5/site-packages/pyGT511C3/FPS.py", line 135
    print 'Command: %s' % commandName
                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyGT511C3/LegacyEnroll.py'...
***   File "./lib/python3.5/site-packages/pyGT511C3/LegacyEnroll.py", line 49
    print 'Press finger to Enroll %s' % str(enrollid)
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyGT511C3/raspberry_pi_GPIO_test.py'...
***   File "./lib/python3.5/site-packages/pyGT511C3/raspberry_pi_GPIO_test.py", line 36
    print 'Put your finger in the scan'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyGT511C3/test_raw.py'...
***   File "./lib/python3.5/site-packages/pyGT511C3/test_raw.py", line 98
    print bif1
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyGT511C3/verificar.py'...
***   File "./lib/python3.5/site-packages/pyGT511C3/verificar.py", line 12
    print Verify(fps,sys.argv[1])
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyGT511C3-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
